# EECS568_final

./: .gitattributes  .gitignore  InEKF_Main.m  LICENSE  Main.m  README.md  calc_measurement_jacob.m  calc_odom.m  gen_codewords.m  liekf.m  raw_data.m  read_images.m  read_kitti.m  readme.md  settings.gradle  setup.m  test_bow.m  test_grad.m  unet_main.py
InEKF Localization/: 2011_10_03_drive_0027_sync_poses.txt  liekf.m  raw_data.m
InEKF Localization/Results/: 2011_09_30_drive_0020_sync_poses.txt
Octomap/: LICENSE_OctoMap.txt
Octomap/data/: 0005mappingnew.ot  mappingPart.ot
Semantic Mapping/: LICENSE_Octovis.txt  weights_epoch104.pth
Semantic Mapping/octomap_example/: CMakeLists.txt
Semantic Mapping/octomap_example/data/: 0002_poses.txt  0002mappingnew.ot  0005mapping.ot  0009_poses.txt  mappingFull.ot
Semantic Mapping/octomap_example/src/: buildmap.cpp
Semantic Mapping/unet/: main.py
Semantic Mapping/unet/datasets/: preprocess.py
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
octomap_example/data/: 0005_poses.txt  0005mapping.ot  mapping.ot
src/: estimate_relative_motion.m  extract_features.m  inv_SIM3.m  liekf.m  local_mapping.m  loop_closing.m  optimize_graph.m  reprojection.m  run.m  structure_from_motion.m  surf_slam.m
src/structs/: ourViewSet.m
src/tests-demos/: calc_SURF_features.m  demo_load_gt.m  demo_ourViewSet.m
src/utils/: calc_bow_repr.m  load_camera_params.m  load_gt_poses.m  read_kitti.m
unet/: main.py
unet/models/: 0027mappingnew.ot  process_network.py
unet/scripts/: label_visualize.py
(+4559 files in other folders)
